added new pictures of a room, added a text about me, fixed padding

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -313,10 +313,14 @@ import { Icon } from 'astro-icon';
         }
 
         .prices p {
-        font-size: 14px;
-        font-weight: 600;
-        margin-bottom: 8px;
-		text-align: left;
-    }
+			font-size: 14px;
+			font-weight: 600;
+			margin-bottom: 8px;
+			text-align: left;
+		}
+
+		.price-section h1 {
+			font-size: 26px;
+		}
 	}
 </style>
