--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,6 @@ import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="VitaLena">
-    
     <main>
         <Banner />
         <div class="aboutme">
@@ -30,13 +29,13 @@ import Footer from "../components/Footer.astro";
                         />
                         <div class="studio-photos">
                             <img
-                                src="/img/about-room1.jpeg"
+                                src="/img/about-room2.jpeg"
                                 alt=""
                                 width="250"
                                 class="room-photo"
                             />
                             <img
-                                src="/img/about-room2.jpeg"
+                                src="/img/about-room3.jpg"
                                 alt=""
                                 width="250"
                                 class="room-photo"
@@ -48,25 +47,76 @@ import Footer from "../components/Footer.astro";
             <div class="about-text">
                 <h2>Steckbrief</h2>
                 <p>
-                    <!-- TODO -->
-                    Nach meiner technischen Lehre und anschliessendem Studium,
-                    arbeitete ich unter anderem in der Medizinaltechnik, wo ich mich
-                    erstmals mit den Funktionen des menschlichen Körpers auseinander
-                    setzte. Während dieser Zeit hatte ich selber starke
-                    Rückenprobleme, welche auch nach ärztlicher und chiropraktischer
-                    Behandlung immer wieder auftauchten. Durch eine Massagetherapie
-                    wurde ich bis heute von meinen Beschwerden befreit. Fasziniert
-                    vom Erfolg dieser Massagetherapie und angetrieben vom Wunsch
-                    Menschen zu helfen und mehr über die Funktionsweise des
-                    menschlichen Körpers zu erfahren, absolvierte ich die Ausbildung
-                    zum Masseur.
+                    Seitdem ich im 1992 den ersten Kurs klassische Massage
+                    gemacht habe, hatte ich immer die Idee den Leuten zu helfen,
+                    die Verspannungen oder sogar Schmerzen haben. Ich arbeitete
+                    als Französisch Lehrerin und danach als Managerin in einer
+                    Firma in Tscheljabinsk und mein Hobby war das Massieren. Es
+                    machte mir viel Spass.
+                </p>
+                <p>
+                    Im Jahr 2012 entschied ich mich, dass ich massieren nicht
+                    mehr nur als mein Hobby, sondern als meinen Job betreiben
+                    und meine spezifischen Kenntnisse verbessern und vertiefen
+                    möchte. Das erste, was ich gemacht hatte, war ein Kurs über
+                    Hiromassage nach der Methode von Enrique Garcia. Coole
+                    Entspannungsmassage. Danke diesen Techniken habe ich mich
+                    völlig in das Massieren verliebt.
+                </p>
+                <p>
+                    In der Folge habe ich verschiedene weitere Techniken gelernt
+                    und zwar Lymphdrainage, Lomi-Lomi, thailändische Massage,
+                    Sportmassage sowie Taping. In dieser Zeit hatte ich für mich
+                    beschlossen, dass ich unbedingt eine medizinische Ausbildung
+                    benötigte. Im Jahr 2016 hatte ich das medizinische Studium
+                    in den diplomierten Bereichen Krankenschwester und
+                    medizinische Masseurin abgeschlossen. Diese 3 Jahre waren
+                    sehr anstrengend und fordernd, aber auch sehr spannend,
+                    interessant und lehrreich.
+                </p>
+                <p>
+                    Während des Studiums habe ich angefangen in einer Klinik für
+                    plastische und ästhetische Chirurgie zu arbeiten, in welcher
+                    ich mein Wissen in den Bereichen medizinische Massage,
+                    Lymphdrainage sowie Spa- Behandlungen einbringen konnte.
+                    Aber meine primäre Tätigkeit war wie bereits davor als
+                    selbständige Masseurin. Ich behandelte die Kundinnen und
+                    Kunden mit den unterschiedlichsten Massagetechniken, welche
+                    ich je nach Bedarf auch mischte und flexibel
+                    aneinanderhängte.
+                </p>
+                <p>
+                    Seit dem Umzug in die Schweiz im Frühling 2018 konnte ich
+                    mein medizinisches Wissen neben klassischer Massage auch bei
+                    Sportmannschaften einsetzen. Dies sowohl im Bereich
+                    Eishockey (Mannschaft der 2. Liga) als auch beim
+                    Gehörlosensport (Nationalteams Curling und Futsal).
+                </p>
+                <p>
+                    Da meine Diplome in der Schweiz nicht anerkannt wurden wurde
+                    ich wieder eine Schülerin und zwar in einer Massageschule in
+                    Zürich. Dort habe ich klassische Massage und medizinische
+                    Grundlagen studiert. Obwohl ich schon viel wusste, habe ich
+                    diverses Neues für mich gelernt, zum Beispiel die
+                    Funktionsmassage. So konnte ich meine Massagefähigkeiten
+                    erweitern. Von welchen auch Sie als meine Kundin oder mein
+                    Kunde profitieren können.
                 </p>
                 <h2>Ausbildungen</h2>
                 <p>- Diplomierter Berufsmasseur bei der Fachschule Bodyfeet</p>
                 <p>- Diplomierter Dorn-Therapeut bei der Fachschule Bodyfeet</p>
-                <p>- Diplomierter Gesundheitsmasseur bei der Fachschule Bodyfeet</p>
-                <p>- Kopfschmerz- und Migränetherapie bei der Fachschule Bodyfeet</p>    
-                <p>- Professionelle Sportmassage bei der Fachschule Bodyfeeteschwerden befreit</p>
+                <p>
+                    - Diplomierter Gesundheitsmasseur bei der Fachschule
+                    Bodyfeet
+                </p>
+                <p>
+                    - Kopfschmerz- und Migränetherapie bei der Fachschule
+                    Bodyfeet
+                </p>
+                <p>
+                    - Professionelle Sportmassage bei der Fachschule
+                    Bodyfeeteschwerden befreit
+                </p>
             </div>
         </div>
         <Footer />
@@ -109,7 +159,6 @@ import Footer from "../components/Footer.astro";
         justify-content: center;
         flex-flow: wrap;
         gap: 20px;
-        
     }
 
     .personal-photo {
@@ -144,6 +193,9 @@ import Footer from "../components/Footer.astro";
         text-align: center;
         margin: 20px 0;
     }
+    .about-text p {
+        padding-bottom: 8px;
+    }
 
     @media (max-width: 960px) {
         /* .proc-photos {
@@ -152,26 +204,24 @@ import Footer from "../components/Footer.astro";
     }
 
     @media (max-width: 600px) {
+        .aboutme {
+            padding-top: 70px;
+        }
 
-    .aboutme {
-        padding-top: 70px;
-    }
-    
-    .page-title {
-        padding: 20px;
-        text-align: center;
-    }
+        .page-title {
+            padding: 20px;
+            text-align: center;
+        }
 
-    .image-section {
-        padding: 0 20px;
-    }
-    /* .studio-photos {
+        .image-section {
+            padding: 0 20px;
+        }
+        /* .studio-photos {
         justify-content: center;
     } */
-   
-    .about-text {
-        padding: 0 20px 20px 20px;
-    }
-    }
 
+        .about-text {
+            padding: 0 20px 20px 20px;
+        }
+    }
 </style>
