added links to buttons

--- a/src/components/BannerHome.astro
+++ b/src/components/BannerHome.astro
@@ -18,8 +18,8 @@ import Menu from "./Menu.astro";
             <p class="mobile">in Kloten, Weiach</p>
           </div>
           <div class="header-buttons">
-              <ButtonGrey href="#contacts" text="MASSAGE BUCHEN"/>
-              <span class="button-pink"><ButtonPink href="#contacts" text="PRESE"/></span>
+              <ButtonGrey href="/contacts/" text="MASSAGE BUCHEN"/>
+              <span class="button-pink"><ButtonPink href="#massage-price" text="PRESE"/></span>
           </div>   
         </div>    
       </div>
@@ -73,9 +73,6 @@ import Menu from "./Menu.astro";
   max-width: 1100px;
   box-sizing: border-box;
   padding: 20px 40px;
-  /* background-image: url(/img/main_small_dark.jpg);
-  background-repeat: no-repeat, no-repeat;
-  background-size: cover; */
 }
 
 .phone-number {
@@ -148,9 +145,6 @@ import Menu from "./Menu.astro";
   max-width: 1100px;
   box-sizing: border-box;
   padding: 8px 20px;
-  /* background-image: url(/img/main_small_dark.jpg);
-  background-repeat: no-repeat, no-repeat;
-  background-size: cover; */
 }
 
 .banner-padding {
