--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -17,7 +17,7 @@ const { imgPath, href, title, body } = Astro.props;
 		<p>{body}</p>
 		<p><a href={href} class="card-link">weiterlesen</a></p>
 		<div class="card-button">
-			<ButtonGrey href="#contacts" text="MASSAGE BUCHEN" />
+			<ButtonGrey href="/contacts/" text="MASSAGE BUCHEN" />
 		</div>
 	</div>
 </div>
