--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,26 +90,26 @@ import { Icon } from 'astro-icon';
 			<div class="card-row">
 			<Card
 			  	imgPath="img/massage1-opt.jpg"
-				href="#"
+				href="/massage/"
 				title="Klassische Massage"
 				body="Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."
 			/>
 			<Card
 				imgPath="img/massage2-opt.jpg"
-				href="#"
+				href="/massage/"
 				title="Entspannungsmassage"
 				body="Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."
 			/>
 			<Card
 				imgPath="img/massage3-opt.jpg"
-				href="#"
+				href="/massage/"
 				title="Sportmassage"
 				body="Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."
 			/>
 			</div>
 		</div>
 		<!-- Prices -->
-		<div class="price-section">
+		<div id="massage-price" class="price-section">
             <h1>Preise</h1>
             <div class="prices">
                 <p>Klassische Massage 120 CHF pro 60 Minuten</p>
