--- a/src/components/CardMassage.astro
+++ b/src/components/CardMassage.astro
@@ -31,9 +31,9 @@ const { imgPath1, href1, title1, body1, body2 } = Astro.props;
 					))}
 				</details>
 				
-				<!-- <div class="card-button">
+				<div class="card-button">
 					<ButtonGrey href="#contacts" text="MASSAGE BUCHEN" />
-				</div> -->
+				</div>
 			</div>
 		</div>
 		
