--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,7 +17,7 @@ import Footer from "../components/Footer.astro";
                     <img
                         src="/img/about-person.jpg"
                         alt=""
-                        width="350"
+                        width="400"
                         class="personal-photo"
                     />
                     <div class="proc-photos">
@@ -156,7 +156,7 @@ import Footer from "../components/Footer.astro";
 
     .images {
         display: flex;
-        justify-content: center;
+        /* justify-content: center; */
         flex-flow: wrap;
         gap: 20px;
     }
