--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -32,22 +32,22 @@ import Footer from "../components/Footer.astro";
                     imgPath1="/img/massage1-opt.jpg"
                     href1="#"
                     title1="Klassische Massage"
-                    body1={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.", "Die klassische Massage wird als KMT (klassische Massagetherapie) ärztlich verordnet. Mit verschiedenen Grifftechniken wie kneten, streichen, vibrieren etc. werden bei der klassischen Massage die Muskulatur und die oberflächlichen Gewebeschichten behandelt. Eine klassische Massage verleiht Kraft und Vitalität."]}
-                    body2={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.", "Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
+                    body1={["Die Klassische Massage ist eine äusserliche, manuelle Behandlung zur Verbesserung/Beseitigung und Prävention von Beschwerden im Bereich des Bewegungsapparates (Muskeln, Sehnen, Bänder, Gelenke, und Nerven) und zur psychischen Entspannung. Bei der Klassischen Massage werden fünf verschiedene Handgriffe angewandt: Effleurage/Streichung, Petrissage/Knetung, Friktion/Reibung, Tapotement/Klopfung und Vibration. Durch die unterschiedlichen Massagegriffe ist es je nach Indikation möglich, den Muskeltonus zu korrigieren."]}
+                    body2="<p>Die klassische Massage:</p><ul><li>stärkt das Immunsystem</li><li>lindert Schmerzen</li><li>reduziert Stress und dessen Auswirkungen wie: Kopfschmerzen, Migräne-Attacken, Schlafprobleme & Muskelverspannungen</li><li>entspannt/aktiviert die Muskulatur</li><li>verbessert den Zellstoffwechsel im Gewebe</li></ul>"
                 />
                 <CardMassage
                     imgPath1="/img/massage2-opt.jpg"
                     href1="#"
                     title1="Entspannungsmassage"
                     body1={["Bei einer Entspannungsmassage werden durch langsame und rhythmischen Knetungen und Streichungen des Gewebes die Durchblutung der Haut, Muskulatur und der Sehnen angeregt. Verhärtungen der Muskulatur werden weicher, Blockaden und Verspannungen lösen sich auf und Entspannung und Wohlbefinden stellt sich ein."]}
-                    body2={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
+                    body2="<p>Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.</p>"
                 />
                 <CardMassage
                     imgPath1="/img/massage3-opt.jpg"
                     href1="#"
                     title1="Sportmassage"
                     body1={["Die Sportmassage ist eine Art der Massage, die im Bereich des Sports einerseits zur Leistungssteigerung durch die verbesserte Regeneration nach Belastungen, andererseits zur Vermeidung von Verletzungen angewendet wird."]}
-                    body2={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
+                    body2="<p>Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.</p>"
                 />
             </div>
             <!-- TODO get rid of top margin of 20px -->
