changed the collapsible link location, added massage texts, fixed paddings

--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -29,13 +29,15 @@ import Footer from "../components/Footer.astro";
 
             <div class="card-section">
                 <CardMassage
+                    collapseLinkId="collapse1"
                     imgPath1="/img/massage1-opt.jpg"
                     href1="#"
                     title1="Klassische Massage"
                     body1={["Die Klassische Massage ist eine äusserliche, manuelle Behandlung zur Verbesserung/Beseitigung und Prävention von Beschwerden im Bereich des Bewegungsapparates (Muskeln, Sehnen, Bänder, Gelenke, und Nerven) und zur psychischen Entspannung. Bei der Klassischen Massage werden fünf verschiedene Handgriffe angewandt: Effleurage/Streichung, Petrissage/Knetung, Friktion/Reibung, Tapotement/Klopfung und Vibration. Durch die unterschiedlichen Massagegriffe ist es je nach Indikation möglich, den Muskeltonus zu korrigieren."]}
-                    body2="<p>Die klassische Massage:</p><ul><li>stärkt das Immunsystem</li><li>lindert Schmerzen</li><li>reduziert Stress und dessen Auswirkungen wie: Kopfschmerzen, Migräne-Attacken, Schlafprobleme & Muskelverspannungen</li><li>entspannt/aktiviert die Muskulatur</li><li>verbessert den Zellstoffwechsel im Gewebe</li></ul>"
+                    body2="<p>Die klassische Massage:</p><ul><li>stärkt das Immunsystem</li><li>lindert Schmerzen</li><li>reduziert Stress und dessen Auswirkungen wie: Kopfschmerzen, Migräne-Attacken, Schlafprobleme & Muskelverspannungen</li><li>entspannt/aktiviert die Muskulatur</li><li>verbessert den Zellstoffwechsel im Gewebe</li><li>löst Verklebungen und Narben</li><li>beeinflusst das vegetative Nervensystem indem es den Sympathikus hemmt und den Parasympathikus aktiviert.</li><li>senkt Blutdruck, Puls und Atemfrequenz</li><li>wirkt über Reflexbögen auf innere Organe</li><li>bringt psychische Entspannung</li></ul>"
                 />
                 <CardMassage
+                    collapseLinkId="collapse2"
                     imgPath1="/img/massage2-opt.jpg"
                     href1="#"
                     title1="Entspannungsmassage"
@@ -43,11 +45,12 @@ import Footer from "../components/Footer.astro";
                     body2="<p>Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.</p>"
                 />
                 <CardMassage
+                    collapseLinkId="collapse3"
                     imgPath1="/img/massage3-opt.jpg"
                     href1="#"
                     title1="Sportmassage"
-                    body1={["Die Sportmassage ist eine Art der Massage, die im Bereich des Sports einerseits zur Leistungssteigerung durch die verbesserte Regeneration nach Belastungen, andererseits zur Vermeidung von Verletzungen angewendet wird."]}
-                    body2="<p>Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.</p>"
+                    body1={["Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen."]}
+                    body2="<p>Die Sportmassage sorgt für:</p><ul><li>die Aktivierung des Kreislaufsystems</li><li>die Erhöhung der Sauerstoffzufuhr</li><li>die verbesserte Ableitung von Schlacken</li><li>die Vermeidung einer zu schnellen Ermüdung</li><li>die Beseitigung von Schmerzen durch überbeanspruchte Muskeln</li><li>die Beschleunigung den Heilungsprozess bei Verletzungen</li><li>die Steigerung des Wohlbefindens</li><li>die Aktivierung des zentralen Nervensystems</li></ul><p>Bei einer Sportmassage unterscheidet man zwischen der Vorbereitungsmassage, der Trainingsmassage, der Zwischenmassage sowie der Regenerationsmassage.</p></br><p>Da die Sportmassage auch den Effekt eines Aufwärmens hat, wird auf diese Weise auch möglichen Verletzungen beim Sport vorgebeugt. Im Anschluss an die sportliche Aktivität soll die Sportmassage dazu beitragen, einen schmerzhaften Muskelkater zu unterbinden. Nach den sportlichen Belastungen wird der Körper durch die Anwendung von bestimmten Griffen behandelt, umso besser regenerieren zu können. Sie dient zum raschen Abbau von Stoffwechselschlacken, damit diese sich nicht im Muskelgewebe festsetzen. Zudem soll die Leistungsfähigkeit des Sportlers erhöht werden.</p></br><p>Doch nicht nur für Leistungssportler ist eine Sportmassage geeignet. Auch für Freizeitsportler oder für Alltag und Berufsleben kann eine solche Massage von Vorteil sein, da sie eine positive Wirkung auf die Muskulatur hat und verkrampfte und überdehnte Muskeln entspannt. Zudem werden unterforderte Muskeln und Gewebe angeregt sowie die Sauerstoffversorgung verbessert.</p></br><p>Neben Sportlern können auch Menschen, die aufgrund von falscher Sitzhaltung, langem Autofahren, langer Arbeit am Schreibtisch bzw. Computer unter</p><ul><li>Rückenschmerzen</li><li>Nackenschmerzen</li><li>Stress</li></ul><p>leiden, von einer Sportmassage profitieren, da die Massage gezielt die dadurch entstehenden Verklebungen und Verspannungen behandelt.</p>"
                 />
             </div>
             <!-- TODO get rid of top margin of 20px -->
