--- a/src/components/CardMassage.astro
+++ b/src/components/CardMassage.astro
@@ -7,9 +7,10 @@ export interface Props {
 	body2: string;
 	href1: string;
 	imgPath1: string;
+	collapseLinkId: string;
 }
 
-const { imgPath1, href1, title1, body1, body2} = Astro.props;
+const { imgPath1, href1, title1, body1, body2, collapseLinkId} = Astro.props;
 ---
 
 <div class="card">
@@ -19,17 +20,17 @@ const { imgPath1, href1, title1, body1, body2} = Astro.props;
 			<div class="card-title-button">
 				<h2>{title1}</h2>
 				<div class="card-button">
-					<ButtonGrey href="#contacts" text="MASSAGE BUCHEN" />
+					<ButtonGrey href="/contacts/" text="MASSAGE BUCHEN" />
 				</div>
 			</div>
 			<div>
 				{body1.map((paragraph) => <p>{paragraph}</p>)}
+				<p id={collapseLinkId} class="card-link">weiterlesen</p> 
 			</div>	
 		</div>
 	</div>
 	<div class="collapsed-text">
-			<p id="collapsible" class="card-link">weiterlesen</p> 
-		<div id="collapsText" class="card-text-rest">
+		<div id={collapseLinkId + "text"} class="card-text-rest">
 			<div set:html={body2}></div>
 			<!-- {body2.map((par) => <p>{par}</p>)} -->
 		</div>
@@ -38,24 +39,24 @@ const { imgPath1, href1, title1, body1, body2} = Astro.props;
 
 <script>	
 	let collapsible = document.getElementsByClassName("card-link");
-	let i;
+	let i = 0;
+
 	for (i = 0; i < collapsible.length; i++) {
-		collapsible[i].addEventListener("click", function() {
-		// this.classList.toggle("active");
-		let content = this.nextElementSibling;
+		collapsible[i].addEventListener("click", function() {		
+		let textId = this.id + "text"
+		let textElement = document.getElementById(textId)
 		if (this.innerHTML === "weiterlesen") {
 			this.innerHTML = "schlissen";
-			this.style.paddingBottom = "20px";
 		} else {
 			this.innerHTML = "weiterlesen";
-			this.style.paddingBottom = "0";
 		}
-		if (content.style.display === "block") {
-			content.style.display = "none";
+		if (textElement.style.display === "block") {
+			textElement.style.display = "none";
 		} else {
-			content.style.display = "block";
+			textElement.style.display = "block";
 		}
-	  });
+	  }
+	  );
 	}
 </script>
 
@@ -96,31 +97,23 @@ const { imgPath1, href1, title1, body1, body2} = Astro.props;
 		padding: 20px;
 	}
 
-	.card-text h2 {
-		/* margin-bottom: 20px; */
-	}
-
 	.card-text p {
 		text-align: left;
-		/* margin-bottom: 16px; */
 	}
 
 	.card-link {
 		color: #aaaaaa;
 		cursor: pointer;
-		padding-bottom: 0;
-	}
-
-	.card-link a {
-		color: #aaaaaa;
+		padding-top: 20px;
 	}
 
 	.card-text-rest {
 		display: none;
+		padding: 20px 20px 20px 20px; 
 	}
 
 	.collapsed-text {
-		padding: 20px;
+		/* padding: 20px; */
 	}
 
 	.card-button {
@@ -174,8 +167,12 @@ const { imgPath1, href1, title1, body1, body2} = Astro.props;
 			margin-top: 10px;
 		}
 
-		.collapsed-text {
-			padding: 0 20px 20px 20px;
+		.card-link {
+			padding-bottom: 0;
+		}
+
+		.card-text-rest {
+			padding-top: 0;
 		}
 	}
 
@@ -210,9 +207,9 @@ const { imgPath1, href1, title1, body1, body2} = Astro.props;
 			font-size: 18px;
 		}
 
-		.collapsed-text {
+		/* .collapsed-text {
 			padding: 0 20px 20px 20px;
-		}
+		} */
 
 		.card {
 			/* margin-top: 20px; */
